spacing fixed on enquiry cards

--- a/app/assets/stylesheets/pages/_contractor_profile.scss
+++ b/app/assets/stylesheets/pages/_contractor_profile.scss
@@ -5,6 +5,7 @@
 .container-enquiries {
   // border: 1px solid rgba(20, 20, 20, 0.3);
   padding: 16px;
+  padding-bottom: 4px;
   border: 1px solid rgba(30, 30, 30, 0.3);
   border-radius: 10px;
 
@@ -24,36 +25,30 @@
   border: 1px solid rgba(30, 30, 30, 0.3);
   padding: 24px 8px;
   border-radius: 10px;
+  margin-bottom: 12px;
 }
 
 .contractor-enquiry-card-date {
   border-right: 1px solid rgba(30, 30, 30, 0.3);
-  flex: auto;
+  flex: 1;
   text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  h5 {
-    margin-bottom: 0;
-  }
 }
 .contractor-enquiry-card-job-info {
   text-align: center;
   border-right: 1px solid rgba(30, 30, 30, 0.3);
-  flex: auto;
+  flex: 1;
 }
 
 .contractor-enquiry-card-user-info {
   text-align: center;
   border-right: 1px solid rgba(30, 30, 30, 0.3);
-  flex: auto;
+  flex: 1;
 }
 
 .contractor-enquiry-card-form {
   text-align: center;
   display: flex;
-  flex: auto;
+  flex: 1;
   justify-content: center;
 
   .form-control {
